--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Matthew LaForest <matthewalaforest@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
