--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "sqlite3": "^4.1.1"
   }
 }
