--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "finale-rest": "^1.1.0",
+    "parcel-bundler": "^1.12.4",
     "sequelize": "^5.21.3",
     "sqlite3": "^4.1.1"
   }
