--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "finale-rest": "^1.1.0",
     "parcel-bundler": "^1.12.4",
+    "react": "^16.12.0",
     "sequelize": "^5.21.3",
     "sqlite3": "^4.1.1"
   }
