:heavy_plus_sign: (client) Add react-dom

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "finale-rest": "^1.1.0",
     "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "sequelize": "^5.21.3",
     "sqlite3": "^4.1.1"
   }
