--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^5.0.2",
     "express": "^4.17.1",
     "finale-rest": "^1.1.0",
+    "nodemon": "^2.0.2",
     "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
