--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.3",
     "sqlite3": "^4.1.1"
   }
