--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.3",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "web-push": "^3.4.3"
   }
 }
