--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Matthew LaForest <matthewalaforest@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build-watch": "parcel watch ./client/index.html",
+    "build-watch": "parcel watch --hmr-port=39259 ./client/index.html",
     "start-watch": "nodemon server/index.js",
     "dev": "concurrently --kill-others \"npm run start\" \"npm run build-watch\"",
     "build": "parcel build ./client/index.html",
