:heavy_plus_sign: (client) Add parcel-plugin-svgr

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "npm run build && node server/index.js"
   },
   "dependencies": {
+    "@svgr/parcel-plugin-svgr": "^5.0.1",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.2",
     "express": "^4.17.1",
